--- a/RPG/src/css/loading.css
+++ b/RPG/src/css/loading.css
@@ -4,7 +4,17 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: linear-gradient(135deg, #1449c0 0%, #2f7854 100%);
+  background: linear-gradient(135deg, #4DC48A 0%, #1e5fd9 100%);
+  color: white;
+  position: relative;
+  overflow: hidden;
+}
+
+#loading-menor {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   color: white;
   position: relative;
   overflow: hidden;
@@ -18,6 +28,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
+  min-height: 408px;
 }
 
 .logo-loading {
@@ -69,7 +80,7 @@
 
 .particle {
   position: absolute;
-  background: linear-gradient(135deg, #00c9a7 0%, #2f80ed 100%);
+  background: linear-gradient(135deg, #4DC48A 0%, #1e5fd9 100%);
   border-radius: 50%;
   animation: float 6s ease-in-out infinite;
 }
@@ -149,7 +160,7 @@
 
 @media (prefers-color-scheme: dark) {
   #loading {
-    background: linear-gradient(135deg, #0d3a9c 0%, #256745 100%);
+    background: linear-gradient(135deg, #4DC48A 0%, #1e5fd9 100%);
   }
 }
 
