--- a/RPG/src/components/tutorial/tutorial.css
+++ b/RPG/src/components/tutorial/tutorial.css
@@ -1,4 +1,5 @@
 .tutorial-container {
+  position: relative;
   padding: 1rem 1.5rem;
   margin: 5% auto;
   margin-top: 80px;
@@ -8,6 +9,7 @@
   border-radius: 12px;
   box-shadow: 0 8px 24px rgba(0,0,0,0.1);
   color: black;
+  z-index: 2;
 }
 
 .tutorial-container h2 {
