--- a/RPG/src/components/configurar-temporadas/Temporadas.css
+++ b/RPG/src/components/configurar-temporadas/Temporadas.css
@@ -78,7 +78,7 @@
   justify-self: center;
   padding: 0.9rem;
   margin-top: 5px;
-  background: linear-gradient(135deg, #4DC48A 0%, #2f7854 100%);;
+  background: linear-gradient(135deg, #4DC48A 0%, #2f7854 100%);
   min-width: 50%;
   border: none;
   border-radius: 8px;
